# healthcare-intake-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  demo.py  documents.py  domain.py  evaluations.py  main.py  model_gateway.py  models.py  schemas.py  services.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 2bebefca9627_initial_intake_workflow_schema.py  7f3c1a9d5e21_add_field_accuracy_to_eval_results.py
backend/scripts/: generate_eval_cases.py  generate_sample_packets.py
backend/tests/: conftest.py  test_workflow.py
docs/: CONTEXT_INDEX.md  architecture.md  model-routing.md  runbook.md  threat-model.md  walkthrough.md
docs/implementation/: task-template.md
evals/datasets/development/: synthetic-001.json  synthetic-002.json  synthetic-003.json  synthetic-004.json  synthetic-005.json  synthetic-006.json  synthetic-007.json  synthetic-008.json  synthetic-009.json  synthetic-010.json  synthetic-011.json  synthetic-012.json  synthetic-013.json  synthetic-014.json  synthetic-015.json  synthetic-016.json  synthetic-017.json  synthetic-018.json  synthetic-019.json  (+21 more)
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: status-pill.tsx
frontend/e2e/: dashboard.spec.ts
frontend/lib/: api.ts
mock-services/downstream-export/: README.md  server.py
(+21 files in other folders)
