[project]
name = "healthcare-intake-ai-backend"
version = "0.1.0"
description = "Synthetic healthcare administrative document-to-action workflow API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "python-multipart>=0.0.12",
  "boto3>=1.35.0",
  "pymupdf>=1.24.0",
  "reportlab>=4.2.0",
  "httpx>=0.27.0",
  "dramatiq[redis]>=1.17.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped", "import-not-found"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
